--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,56 +1,48 @@
-worker_processes 1;
+user  nginx;
+worker_processes auto;
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
 
 events {
     worker_connections 1024;
 }
 
 http {
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent"';
+    include       mime.types;
+    default_type  application/octet-stream;
+    sendfile        on;
+    keepalive_timeout  65;
 
-    access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log;
-
-    upstream kortex_shield_api {
-        server kortex-shield:8000;
-    }
+    access_log  /var/log/nginx/access.log combined;
 
     server {
         listen 80;
-        
-        mirror /_mirror;
-        mirror_request_body on;
+        server_name _;
 
-        #The lines below are commented out for easier testing in cloud environments.
-        #Remove the '#' to re-enable password protection.
-        auth_basic "Admin Area";
+        # Basic auth for management URI
+        auth_basic "Restricted";
         auth_basic_user_file /etc/nginx/auth/.htpasswd;
 
+        # Serve war static landing page
+        location /wars/ {
+            alias /usr/share/nginx/html/wars/;
+            index index.jsp index.html;
+            try_files $uri $uri/ =404;
+        }
+
+        # Proxy to tomcat for JSP execution
         location / {
-            resolver 127.0.0.11; 
-
-            set $target_app http://tomcat-app1:8080;
-
-            if ($http_x_app = "app2") { set $target_app http://tomcat-app2:8080; }
-            if ($http_x_app = "app3") { set $target_app http://tomcat-app3:8080; }
-            if ($arg_app = "app2") { set $target_app http://tomcat-app2:8080; }
-            if ($arg_app = "app3") { set $target_app http://tomcat-app3:8080; }
-
-            proxy_pass $target_app;
+            proxy_pass http://tomcat:8080/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location = /_mirror {
-            internal;
-            proxy_pass http://kortex_shield_api/analyze;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Original-Method $request_method;
-            proxy_set_header X-Original-URI $request_uri;
-            proxy_pass_request_body on;
+        # Expose logs for reading (protected)
+        location /logs/ {
+            alias /var/log/nginx/;
+            autoindex on;
         }
     }
 }
