--- a/inference/requirements.txt
+++ b/inference/requirements.txt
@@ -1,6 +1,8 @@
-fastapi==0.103.1
-uvicorn[standard]==0.23.2
-torch==2.1.0
-transformers==4.34.0
-tokenizers==0.14.1
-python-multipart==0.0.6
+fastapi
+uvicorn[standard]
+torch
+transformers
+tokenizers
+python-multipart
+starlette-prometheus
+numpy<2.0
