--- a/inference/Dockerfile
+++ b/inference/Dockerfile
@@ -1,10 +1,7 @@
-FROM python:3.11-slim
-
+FROM python:3.9-slim
 WORKDIR /app
-COPY ./app /app/app
-COPY ../kortex_model /app/kortex_model
-
-RUN pip install --no-cache-dir fastapi "uvicorn[standard]" torch transformers tokenizers
-
-EXPOSE 9000
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "9000", "--workers", "1"]
+COPY ./requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+COPY ./app /app
+EXPOSE 8000
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
